<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sumiofmidnite.androidauthoritytutorial.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/Greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringGreeting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <TextView
            android:id="@+id/Project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringProject"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="42dp" />

        <EditText
            android:id="@+id/getProjectname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="67dp" />

        <TextView
            android:id="@+id/WorkBreakInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringWorkBreakInterval"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="123dp" />

        <LinearLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/WBIWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stringWBIWork"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <EditText
                    android:id="@+id/getWBIWorkTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="175dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/WBIBreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stringWBIBreak"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="240dp" />

                <EditText
                    android:id="@+id/getWBIBreakTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="257dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="0dp"
                android:onClick="onButtonTap"
                android:text="@string/stringGoProductive"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="324dp" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="0dp"
                android:onClick="onButtonTap"
                android:text="@string/stringReset"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="324dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/showTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringTask"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="437dp" />

        <EditText
            android:id="@+id/Projectname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/WBIWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/stringWBIWork"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="158dp" />

                <EditText
                    android:id="@+id/WBIWorkTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="175dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/WBIBreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:text="@string/stringWBIBreak"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="240dp" />

                <EditText
                    android:id="@+id/WBIBreakTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:ems="10"
                    android:inputType="time"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="257dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
